[project]
name = "MachineState"
dynamic = ["version"]
authors = [
  { name="Thomas Gruber", email="thomas.gruber@fau.de" },
  { name="Jan Laukemann", email="jan.laukemann@fau.de" },
  { name="Julian Hammer", email="julian.hammer@fau.de" },
]
description = "Gathering the system state before benchmarking and other tests on compute systems."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	'Development Status :: 3 - Alpha',

    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',

    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',

    'Topic :: System :: Benchmark',
    'Topic :: System :: Hardware',
    'Topic :: System :: Operating System',
    'Topic :: System :: Systems Administration',
    'Topic :: Education :: Testing',

    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    "Programming Language :: Python :: 3",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/RRZE-HPC/MachineState"
Issues = "https://github.com/RRZE-HPC/MachineState/issues"

[tool.setuptools.dynamic]
version = { attr = "machinestate.MACHINESTATE_VERSION" }
